# LogLineFold

./: Cargo.toml  README.md  State of Protein Folding Research.md  test_request.json
app/: Cargo.toml
app/src/: cli.rs  folding.rs  main.rs  protein.rs
benchmarks/: README.md  native_physics_benchmark.py  prepare_benchmarks.py  run_benchmarks.py  test_native_physics.lll
contracts/: README.md  demo_chain.lll  gb1_benchmark.lll  logline_fold_run.lll  trpcage_benchmark.lll  ww_benchmark.lll
core/: Cargo.toml
core/src/: folding_parser.rs  folding_ruleset.rs  folding_runtime.rs  lib.rs  physics_bridge.rs  protein_state.rs  rotation_solver.rs  simple_rng.rs  validation.rs
data/: README.md
data/raw/: demo_genome.fa
docs/: architecture_math.md  architecture_overview.md  glossary.md  lll_contract_spec.md  provenance_log.md  replay_workflow.md  roadmap.md
interface/: Cargo.toml
interface/awesome-ui/: README.md
interface/awesome-ui/app/: globals.css  page.tsx
interface/awesome-ui/app/api/genome/: route.ts
interface/awesome-ui/app/api/run-benchmarks/: route.ts
interface/awesome-ui/app/api/runs/: route.ts
interface/awesome-ui/app/api/runs/[filename]/: route.ts
interface/awesome-ui/app/api/runs/latest/: route.ts
interface/awesome-ui/components/: agent-explorer.tsx  discovery-panel.tsx  dna-viewer.tsx
interface/src/: lib.rs
logs/: test.jsonl  ui-demo.jsonl
logs/benchmarks/: gb1.jsonl  trpcage.jsonl  ww.jsonl
molecule/: Cargo.toml
molecule/src/: lib.rs
physics/: Cargo.toml  openmm_bridge.py
physics/src/: force_fields.rs  integrators.rs  lib.rs  native_bridge.rs
scripts/: fix_openmm.sh  openmm_doctor.sh  run.sh  setup_and_run.sh  torch_embeddings.py  verify_openmm.sh
sim/: Cargo.toml
sim/src/: lib.rs
time/: Cargo.toml
time/src/: lib.rs
(+3 files in other folders)
