[package]
name = "folding-app"
version = "0.1.0"
edition = "2024"

[dependencies]
folding-core = { path = "../core" }
folding-time = { path = "../time" }
folding-molecule = { path = "../molecule" }
folding-interface = { path = "../interface" }
folding-sim = { path = "../sim" }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
