[package]
name = "folding-interface"
version = "0.1.0"
edition = "2024"

[dependencies]
folding-core = { path = "../core" }
folding-time = { path = "../time" }
folding-sim = { path = "../sim" }
folding-molecule = { path = "../molecule" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
