[package]
name = "folding-physics"
version = "0.1.0"
edition = "2021"

[dependencies]
folding-molecule = { path = "../molecule" }
folding-time = { path = "../time" }
nalgebra = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rand_distr = "0.4"
thiserror = "1.0"
rayon = "1.8"

[features]
default = ["amber99sb"]
amber99sb = []
charmm36 = []
opls_aa = []
